--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -6,7 +6,7 @@ div#searchbar {
     position: fixed;
     top: 64px;
     width: 100%;
-    z-index: 999;
+    z-index: var(--z-index-bar);
 
     height: 56px;
     background-color: var(--color-primary-0);
