--- a/src/components/TimelineCard/variants/CardMedium/CardMedium.scss
+++ b/src/components/TimelineCard/variants/CardMedium/CardMedium.scss
@@ -13,7 +13,7 @@ article#card-medium {
     background-color: var(--color-primary-0);
     box-shadow: 4px 4px 2px rgb(35, 45, 46, 25%);
     position: relative; // just to contain card-date-wrapper which is position absolute
-    z-index: -1;
+    // z-index: -1;
 
     a.anchor-wrapper {
         height: 100%;
