--- a/src/components/TimelineCard/variants/CardSmall/CardSmall.scss
+++ b/src/components/TimelineCard/variants/CardSmall/CardSmall.scss
@@ -13,7 +13,7 @@ article#card-small {
     box-shadow: 4px 4px 2px rgb(35, 45, 46, 25%);
     height: 112px; // piu piccola??
     position: relative; // just to contain card-date-wrapper which is position absolute
-    z-index: -1; // -999 ? anche in CardMedium
+    // z-index: -1; // -999 ? anche in CardMedium
 
     a.anchor-wrapper {
         height: 100%;
