--- a/src/components/Topbar/Topbar.scss
+++ b/src/components/Topbar/Topbar.scss
@@ -6,7 +6,7 @@ header#topbar {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 999;
+    z-index: var(--z-index-bar);
 
     height: 64px;
     background-color: var(--color-primary-0);
