--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -48,8 +48,17 @@
 }
 
 :root {
+    // Shadows
     --shadow-down: 0px 2px 4px 0px rgba(82, 82, 82, 0.35);
     --shadow-up: 0px 0px 3px 0px rgba(82, 82, 82, 0.35);
     --shadow-border-filter: drop-shadow(0px 0px 2px rgba(82, 82, 82, 0.35));
     --shadow-border: 0px 2px 4px rgba(0, 0, 0, 0.1);
+
+    // Z-index
+    // Z-index
+    --z-index-modal: 100;
+    --z-index-dropdown: 99;
+    --z-index-menu: 90;
+    --z-index-bar: 80;
+    --z-index-down: -1;
 }
